--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "angular": "^1.5.0",
+    "angular-ui-bootstrap": "^2.1.3",
     "angular-ui-router": "1.0.0-beta.1"
   },
   "devDependencies": {
